Bug 1926879 [wpt PR 48800] - [container] Add tests for scroll-state(overflowing:none), a=testonly
Automatic update from web-platform-tests
[container] Add tests for scroll-state(overflowing:none)

Bug: 367764865
Change-Id: Ie259c87eea855943b1dfc0da357c438e3f901d39
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5956403
Commit-Queue: Rune Lillesveen <futharkchromium.org>
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/main{#1373297}

--

wpt-commits: 27e02b41e3b59051693fb75dd70107e883c857a8
wpt-pr: 48800

UltraBlame original commit: 2d330969332c06182e9c880d182eec3b0acbfe60

--- a/testing/web-platform/tests/css/css-conditional/container-queries/scroll-state/scroll-state-initially-overflowing.html
+++ b/testing/web-platform/tests/css/css-conditional/container-queries/scroll-state/scroll-state-initially-overflowing.html
@@ -225,6 +225,12 @@ bottom
 :
 no
 ;
+-
+-
+none
+:
+no
+;
 }
 container
 scroll
@@ -261,6 +267,26 @@ span
 -
 -
 bottom
+:
+yes
+;
+}
+}
+container
+scroll
+-
+state
+(
+overflowing
+:
+none
+)
+{
+span
+{
+-
+-
+none
 :
 yes
 ;
@@ -539,6 +565,26 @@ no
 "
 )
 ;
+assert_equals
+(
+getComputedStyle
+(
+t1
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
+"
+)
+;
 }
 "
 overflow
@@ -597,6 +643,26 @@ bottom
 )
 "
 no
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+t2
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
 "
 )
 ;
@@ -661,6 +727,26 @@ no
 "
 )
 ;
+assert_equals
+(
+getComputedStyle
+(
+t3
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
+"
+)
+;
 }
 "
 overflow
@@ -719,6 +805,26 @@ bottom
 )
 "
 no
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+t4
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
 "
 )
 ;
@@ -783,6 +889,26 @@ no
 "
 )
 ;
+assert_equals
+(
+getComputedStyle
+(
+t5
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
+"
+)
+;
 }
 "
 overflow
@@ -840,6 +966,26 @@ bottom
 )
 "
 yes
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+t6
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+no
 "
 )
 ;
@@ -905,6 +1051,26 @@ yes
 "
 )
 ;
+assert_equals
+(
+getComputedStyle
+(
+t7
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+no
+"
+)
+;
 }
 "
 overflow
@@ -964,6 +1130,26 @@ bottom
 )
 "
 no
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+t8
+)
+.
+getPropertyValue
+(
+"
+-
+-
+none
+"
+)
+"
+yes
 "
 )
 ;
