Bug 1926655 [wpt PR 48780] - Update WPT for PublicKeyCredential.getClientCapabilities, a=testonly
Automatic update from web-platform-tests
Update WPT for PublicKeyCredential.getClientCapabilities

This CL splits existing test into two:
1) Checks keys are sorted and values are booleans.
2) Verifies only known capabilities are present.

Bug: 360327828
Change-Id: I6535efaab876b6c31c5249277fc97c0cbe9bda51
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5953387
Reviewed-by: Nina Satragno <nsatragnochromium.org>
Commit-Queue: Andrii Natiahlyi <natiahlyigoogle.com>
Cr-Commit-Position: refs/heads/main{#1373344}

--

wpt-commits: bc8c3fe85c40381070fc960240adb153204e487f
wpt-pr: 48780

UltraBlame original commit: 099cc3a65388675231168e8d087235a4ab2a6d06

--- a/testing/web-platform/tests/webauthn/getclientcapabilities.https.html
+++ b/testing/web-platform/tests/webauthn/getclientcapabilities.https.html
@@ -120,8 +120,11 @@ strict
 "
 ;
 const
-KNOWN_CAPABILITIES
+KNOWN_CAPABILITIES_SET
 =
+new
+Set
+(
 [
 "
 conditionalCreate
@@ -151,6 +154,7 @@ signalUnknownCredential
 userVerifyingPlatformAuthenticator
 "
 ]
+)
 ;
 promise_test
 (
@@ -169,23 +173,49 @@ getClientCapabilities
 (
 )
 ;
-assert_array_equals
-(
+const
+keys
+=
 Object
 .
 keys
 (
 capabilities
 )
-KNOWN_CAPABILITIES
+;
+const
+sortedKeys
+=
+[
+.
+.
+.
+keys
+]
+.
+sort
+(
+)
+;
+assert_array_equals
+(
+keys
+sortedKeys
+"
+Keys
+should
+be
+sorted
+lexicographically
+"
 )
 ;
 for
 (
-let
-capability
+const
+key
 of
-KNOWN_CAPABILITIES
+keys
 )
 {
 assert_equals
@@ -193,23 +223,95 @@ assert_equals
 typeof
 capabilities
 [
-capability
+key
 ]
 "
 boolean
 "
+Value
+for
+"
+{
+key
+}
+"
+should
+be
+boolean
 )
 ;
 }
 }
 "
-Known
-capabilities
-are
-reported
-and
-are
+Capabilities
+object
+has
 sorted
+keys
+and
+boolean
+values
+"
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+capabilities
+=
+await
+PublicKeyCredential
+.
+getClientCapabilities
+(
+)
+;
+for
+(
+const
+key
+of
+Object
+.
+keys
+(
+capabilities
+)
+)
+{
+assert_true
+(
+KNOWN_CAPABILITIES_SET
+.
+has
+(
+key
+)
+Capability
+"
+{
+key
+}
+"
+should
+be
+a
+known
+capability
+)
+;
+}
+}
+"
+Capabilities
+keys
+are
+known
 "
 )
 ;
