Bug 1926967 [wpt PR 48805] - [Partitioned Popins] Simplify RSA tests, a=testonly
Automatic update from web-platform-tests
[Partitioned Popins] Simplify RSA tests

These are getting out of hand, let's consolidate the read paths in
JavaScript at least.

Explainer: https://explainers-by-googlers.github.io/partitioned-popins/
I2P: https://groups.google.com/a/chromium.org/g/blink-dev/c/ApU_zUmpQ2g/

Bug: 340606651
Change-Id: I43ae4fcd338611c4d0cd918b3fdad6b59098fd22
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5962496
Reviewed-by: Sandor «Alex» Major <sandormajorgoogle.com>
Commit-Queue: Sandor «Alex» Major <sandormajorgoogle.com>
Auto-Submit: Ari Chivukula <arichivchromium.org>
Cr-Commit-Position: refs/heads/main{#1373485}

--

wpt-commits: 30367c27bbd064b6fba69268a8288f2b2f12e1ec
wpt-pr: 48805

UltraBlame original commit: e0149fdc816c9c3ef0cfd99fc4f3f3560d0b37db

--- a/testing/web-platform/tests/partitioned-popins/resources/partitioned-popins.cookies-iframe.html
+++ b/testing/web-platform/tests/partitioned-popins/resources/partitioned-popins.cookies-iframe.html
@@ -119,11 +119,7 @@ document
 cookie
 =
 "
-third
--
-party
--
-strict
+ThirdPartyStrict
 =
 "
 +
@@ -145,11 +141,7 @@ document
 cookie
 =
 "
-third
--
-party
--
-lax
+ThirdPartyLax
 =
 "
 +
@@ -171,11 +163,7 @@ document
 cookie
 =
 "
-third
--
-party
--
-none
+ThirdPartyNone
 =
 "
 +
