--- a/testing/web-platform/tests/partitioned-popins/resources/partitioned-popins.cookies-window.html
+++ b/testing/web-platform/tests/partitioned-popins/resources/partitioned-popins.cookies-window.html
@@ -119,11 +119,7 @@ document
 cookie
 =
 "
-first
--
-party
--
-strict
+FirstPartyStrict
 =
 "
 +
@@ -143,11 +139,7 @@ document
 cookie
 =
 "
-first
--
-party
--
-lax
+FirstPartyLax
 =
 "
 +
@@ -167,11 +159,7 @@ document
 cookie
 =
 "
-first
--
-party
--
-none
+FirstPartyNone
 =
 "
 +
