Bug 1927046 [wpt PR 48815] - [text-box-trim] More spec-compliant first/last formatted line., a=testonly
Automatic update from web-platform-tests
[text-box-trim] More spec-compliant first/last formatted line.

See https://drafts.csswg.org/css-pseudo-4/#first-text-line

1. For a block container that establishes an inline formatting context,
the "first formatted line" is its first line box, if it has one.
Otherwise, there is no first formatted line.

2. Otherwise, for a block container that has block children, look inside
the first in-flow block child (if any) and do #1 if it establishes an
inline formatting context. Otherwise, do #2.

In short, we don't need to search for line boxes in blocks after the
first block child. If there is no line in the first child, there's no
"first formatted line".

There's no spec for "last formatted line", but apply the same logic.
I.e. if the last block child has no line, there's no "last formatted
line".

This allows us to simplify things a bit, especially when it comes to
re-laying out (kTextBoxTrimEndDidNotApply). The only case where we need
this now is for blocks inside inlines: If the last formatted line is
inside a block-in-inline, we need to go back and re-lay it out if it
turns out to be the last line (which isn't something we can check inside
block-in-inline layout). Note: When adding support for block
fragmentation, trimming at a fragmentainer's block end will be another
case where we need to re-lay out.

The motivation for this change was text box trimming inside block
fragmentation (upcoming CL), and be able to add support for that and
still be reasonably confident that it won't become too complicated.

This fixes one existing test. Some other existing tests had to be
updated because of this change (they were making incorrect assumptions
about first/last formatted line). As a result of that, some new refs had
to be added, since other tests were piggy-backing on the same ref.

Bug: 40254880, 367766472
Change-Id: I3fcc53af863

--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-half-leading-block-box-003.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-half-leading-block-box-003.html
@@ -11,11 +11,17 @@ text
 box
 -
 trim
-trims
-through
-invisible
+should
+only
+be
+applied
+on
+the
+first
+/
+last
+formatted
 line
-boxes
 <
 /
 title
@@ -68,26 +74,24 @@ https
 :
 /
 /
-www
+drafts
 .
-w3
+csswg
 .
 org
 /
-TR
-/
 css
 -
-inline
+pseudo
 -
-3
+4
 /
 #
-invisible
+first
+-
+formatted
 -
 line
--
-boxes
 "
 >
 <
@@ -200,6 +204,125 @@ red
 <
 /
 style
+>
+<
+!
+-
+-
+The
+SPANs
+here
+will
+be
+wrapped
+inside
+anonymous
+blocks
+.
+#
+div
+-
+parent
+will
+thus
+start
+with
+an
+anonymous
+block
+(
+for
+the
+first
+SPAN
+)
+.
+When
+looking
+for
+a
+first
+formatted
+line
+it
+will
+have
+to
+be
+inside
+this
+anonymous
+block
+(
+or
+it
+doesn
+'
+t
+exist
+at
+all
+)
+.
+To
+quote
+the
+spec
+:
+The
+first
+formatted
+line
+of
+a
+block
+container
+[
+.
+.
+.
+]
+that
+contains
+block
+-
+level
+content
+[
+.
+.
+.
+]
+is
+the
+first
+formatted
+line
+of
+its
+first
+in
+-
+flow
+block
+-
+level
+child
+.
+If
+no
+such
+line
+exists
+it
+has
+no
+first
+formatted
+line
+.
+-
+-
 >
 <
 div
