--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-002-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-002-ref.html
@@ -4,119 +4,6 @@ DOCTYPE
 html
 >
 <
-title
->
-Test
-when
-a
-box
-with
-text
--
-box
--
-trim
-is
-block
-fragmented
-<
-/
-title
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-inline
--
-3
-/
-#
-text
--
-box
--
-edge
-"
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-inline
--
-3
-/
-#
-text
--
-box
--
-trim
-"
->
-<
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-text
--
-box
--
-trim
--
-multicol
--
-002
--
-ref
-.
-html
-"
->
-<
 link
 rel
 =
@@ -207,25 +94,18 @@ height
 ;
 }
 .
-trim
+up
+-
+half
 {
-text
--
-box
--
-trim
+position
 :
-trim
--
-both
+relative
 ;
-text
--
-box
--
-edge
+top
 :
-text
+-
+20px
 ;
 }
 <
@@ -241,33 +121,38 @@ multicol
 "
 >
 <
-div
+span
 class
 =
 "
-trim
+up
+-
+half
 "
 >
-abc
-abc
-abc
-abc
-abc
-abc
 abc
 abc
 abc
 abc
 <
 /
-div
+span
 >
+abc
+abc
+abc
+abc
+abc
+abc
 <
 div
 class
 =
 "
 spacer
+up
+-
+half
 "
 >
 <
