Bug 1927054 [wpt PR 48817] - [text-box-trim] Trim at the start/end of columns., a=testonly
Automatic update from web-platform-tests
[text-box-trim] Trim at the start/end of columns.

There are now two types of text box trimming: The already existing one,
trimming at the start or end of a node. And the new one, trimming at the
start or end of a fragmentainer. We need to distinguish between these,
since they aren't active at the same times. Therefore, the old "should
text box trim start/end" flags are now qualified with "node" (e.g.
ShouldTextBoxTrimNodeStart()), and the new ones are qualified with
"fragmentainer" (e.g. ShouldTextBoxTrimFragmentainerStart()).

When text-box-trim is specified inside a fragmentation context, it
should not cause trimming at fragmentainer breaks, unless
box-decoration-break is 'clone'. See
https://github.com/w3c/csswg-drafts/issues/5335#issuecomment-1908655635

When text-box-trim is specified on a multicol container (i.e. NOT inside
the fragmentation context that the multicol container establishes), it
should cause trimming at fragmentainer breaks. See
https://github.com/w3c/csswg-drafts/issues/5335#issuecomment-2380160677

Update text-box-trim-multicol-001.html, since we now trim at
fragmentainer boundaries. Also make the multicol container slightly
shorter, to demonstrate that we also trim at the end of columns.

Make the multicol container in text-box-trim-multicol-002.html slightly
taller, to demonstrate that there's trimming at the end of columns in
that case (trimming is specified on a multicol descendant, and
box-decoration-break is not 'clone').

Also add more tests for trimming at column boundaries, and also some
basic printing tests that simply test that text-box trimming still
works, at least when they're not next to a page boundary. Blink (and all
other browsers, I think) cannot paint outside the page area, so trimming
is disabled at page boundaries. There will be an internal WPT test for
that in an upcoming CL.

Set widows an

--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-001-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-001-ref.html
@@ -45,6 +45,14 @@ size
 :
 100px
 ;
+margin
+-
+block
+-
+start
+:
+20px
+;
 }
 .
 multicol
@@ -68,7 +76,7 @@ solid
 ;
 height
 :
-4lh
+290px
 ;
 width
 :
@@ -90,22 +98,7 @@ line
 -
 height
 :
-2
-;
-}
-.
-up
--
-half
-{
-position
-:
-relative
-;
-top
-:
--
-20px
+1
 ;
 }
 <
@@ -120,30 +113,67 @@ class
 multicol
 "
 >
-<
-span
-class
-=
-"
-up
--
-half
-"
->
-abc
-abc
-abc
 abc
 <
-/
-span
+br
+>
+<
+br
 >
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
 <
 div
 class
