--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-002.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-002.html
@@ -24,6 +24,44 @@ fragmented
 title
 >
 <
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
+text
+-
+box
+-
+trim
+specified
+inside
+a
+fragmentation
+context
+does
+not
+trim
+at
+column
+boundaries
+unless
+box
+-
+decoration
+-
+break
+is
+'
+clone
+'
+"
+>
+<
 link
 rel
 =
@@ -89,6 +127,39 @@ text
 box
 -
 trim
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+github
+.
+com
+/
+w3c
+/
+csswg
+-
+drafts
+/
+issues
+/
+5335
+#
+issuecomment
+-
+1908655635
 "
 >
 <
@@ -181,7 +252,7 @@ solid
 ;
 height
 :
-4lh
+360px
 ;
 width
 :
@@ -204,6 +275,14 @@ line
 height
 :
 2
+;
+orphans
+:
+1
+;
+widows
+:
+1
 ;
 }
 .
