--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-003.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-003.html
@@ -17,45 +17,48 @@ box
 -
 trim
 is
-multi
--
-column
+block
+fragmented
 <
 /
 title
 >
 <
-link
-rel
+meta
+name
 =
 "
-help
+assert
 "
-href
+content
 =
 "
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-inline
--
-3
-/
-#
 text
 -
 box
 -
 trim
+specified
+inside
+a
+fragmentation
+context
+does
+not
+trim
+at
+column
+boundaries
+unless
+box
+-
+decoration
+-
+break
+is
+'
+clone
+'
 "
 >
 <
@@ -106,6 +109,40 @@ https
 :
 /
 /
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+inline
+-
+3
+/
+#
+text
+-
+box
+-
+trim
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
 github
 .
 com
@@ -122,7 +159,7 @@ issues
 #
 issuecomment
 -
-2380160677
+1908655635
 "
 >
 <
@@ -143,7 +180,7 @@ trim
 -
 multicol
 -
-001
+003
 -
 ref
 .
@@ -269,6 +306,14 @@ edge
 :
 text
 ;
+box
+-
+decoration
+-
+break
+:
+clone
+;
 }
 <
 /
@@ -280,6 +325,13 @@ class
 =
 "
 multicol
+"
+>
+<
+div
+class
+=
+"
 trim
 "
 >
@@ -293,6 +345,10 @@ abc
 abc
 abc
 abc
+<
+/
+div
+>
 <
 div
 class
