--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-005.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-005.html
@@ -17,45 +17,48 @@ box
 -
 trim
 is
-multi
--
-column
+block
+fragmented
 <
 /
 title
 >
 <
-link
-rel
+meta
+name
 =
 "
-help
+assert
 "
-href
+content
 =
 "
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-inline
--
-3
-/
-#
 text
 -
 box
 -
 trim
+specified
+inside
+a
+fragmentation
+context
+does
+not
+trim
+at
+column
+boundaries
+unless
+box
+-
+decoration
+-
+break
+is
+'
+clone
+'
 "
 >
 <
@@ -106,6 +109,40 @@ https
 :
 /
 /
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+inline
+-
+3
+/
+#
+text
+-
+box
+-
+trim
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
 github
 .
 com
@@ -122,7 +159,7 @@ issues
 #
 issuecomment
 -
-2380160677
+1908655635
 "
 >
 <
@@ -143,7 +180,7 @@ trim
 -
 multicol
 -
-001
+005
 -
 ref
 .
@@ -221,6 +258,16 @@ width
 :
 20ch
 ;
+text
+-
+box
+-
+trim
+:
+trim
+-
+both
+;
 font
 -
 family
@@ -259,7 +306,7 @@ trim
 :
 trim
 -
-both
+end
 ;
 text
 -
@@ -280,6 +327,13 @@ class
 =
 "
 multicol
+"
+>
+<
+div
+class
+=
+"
 trim
 "
 >
@@ -291,8 +345,10 @@ abc
 abc
 abc
 abc
-abc
-abc
+<
+/
+div
+>
 <
 div
 class
