--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-007-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-007-ref.html
@@ -43,7 +43,7 @@ block
 -
 size
 :
-100px
+5px
 ;
 }
 .
@@ -68,7 +68,7 @@ solid
 ;
 height
 :
-360px
+240px
 ;
 width
 :
@@ -90,11 +90,11 @@ line
 -
 height
 :
-2
+1
 ;
 }
 .
-up
+down
 -
 half
 {
@@ -104,7 +104,6 @@ relative
 ;
 top
 :
--
 20px
 ;
 }
@@ -121,28 +120,76 @@ multicol
 "
 >
 <
-span
+div
 class
 =
 "
-up
+spacer
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+down
 -
 half
 "
 >
 abc
-abc
-abc
-abc
 <
-/
-span
+br
+>
+<
+br
 >
 abc
+<
+br
+>
+<
+br
+>
+<
+br
+>
+<
+/
+div
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
 <
 div
@@ -150,9 +197,6 @@ class
 =
 "
 spacer
-up
--
-half
 "
 >
 <
