--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-008-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-008-ref.html
@@ -33,20 +33,6 @@ css
 style
 >
 .
-spacer
-{
-background
-:
-lightgray
-;
-block
--
-size
-:
-100px
-;
-}
-.
 multicol
 {
 column
@@ -68,7 +54,7 @@ solid
 ;
 height
 :
-360px
+160px
 ;
 width
 :
@@ -90,11 +76,11 @@ line
 -
 height
 :
-2
+1
 ;
 }
 .
-up
+down
 -
 half
 {
@@ -104,7 +90,6 @@ relative
 ;
 top
 :
--
 20px
 ;
 }
@@ -121,43 +106,60 @@ multicol
 "
 >
 <
-span
+div
 class
 =
 "
-up
+down
 -
 half
 "
 >
 abc
-abc
-abc
-abc
 <
-/
-span
+br
+>
+<
+br
 >
 abc
-abc
-abc
-abc
-abc
-abc
 <
-div
-class
-=
-"
-spacer
-up
--
-half
-"
+br
+>
+<
+br
 >
 <
 /
 div
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+br
 >
 <
 /
