--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-008.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-008.html
@@ -17,45 +17,48 @@ box
 -
 trim
 is
-multi
--
-column
+block
+fragmented
 <
 /
 title
 >
 <
-link
-rel
+meta
+name
 =
 "
-help
+assert
 "
-href
+content
 =
 "
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-inline
--
-3
-/
-#
 text
 -
 box
 -
 trim
+specified
+inside
+a
+fragmentation
+context
+does
+not
+trim
+at
+column
+boundaries
+unless
+box
+-
+decoration
+-
+break
+is
+'
+clone
+'
 "
 >
 <
@@ -106,6 +109,40 @@ https
 :
 /
 /
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+inline
+-
+3
+/
+#
+text
+-
+box
+-
+trim
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
 github
 .
 com
@@ -122,7 +159,7 @@ issues
 #
 issuecomment
 -
-2380160677
+1908655635
 "
 >
 <
@@ -143,7 +180,7 @@ trim
 -
 multicol
 -
-001
+008
 -
 ref
 .
@@ -180,20 +217,6 @@ css
 style
 >
 .
-spacer
-{
-background
-:
-lightgray
-;
-block
--
-size
-:
-100px
-;
-}
-.
 multicol
 {
 column
@@ -215,11 +238,21 @@ solid
 ;
 height
 :
-290px
+160px
 ;
 width
 :
 20ch
+;
+text
+-
+box
+-
+trim
+:
+trim
+-
+start
 ;
 font
 -
@@ -248,28 +281,6 @@ widows
 1
 ;
 }
-.
-trim
-{
-text
--
-box
--
-trim
-:
-trim
--
-both
-;
-text
--
-box
--
-edge
-:
-text
-;
-}
 <
 /
 style
@@ -280,31 +291,21 @@ class
 =
 "
 multicol
-trim
 "
 >
-abc
-abc
-abc
-abc
-abc
-abc
-abc
-abc
-abc
-abc
 <
 div
-class
-=
-"
-spacer
-"
 >
 <
 /
 div
 >
+abc
+abc
+abc
+abc
+abc
+abc
 <
 /
 div
