--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-004-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-multicol-004-ref.html
@@ -68,7 +68,7 @@ solid
 ;
 height
 :
-360px
+290px
 ;
 width
 :
@@ -90,11 +90,11 @@ line
 -
 height
 :
-2
+1
 ;
 }
 .
-up
+down
 -
 half
 {
@@ -104,7 +104,6 @@ relative
 ;
 top
 :
--
 20px
 ;
 }
@@ -120,39 +119,89 @@ class
 multicol
 "
 >
+abc
 <
-span
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+br
+>
+abc
+<
+br
+>
+<
+div
 class
 =
 "
-up
+down
 -
 half
 "
 >
 abc
-abc
-abc
-abc
 <
-/
-span
+br
+>
+<
+br
 >
 abc
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
+<
+br
+>
 abc
+<
+br
+>
+<
+br
+>
 abc
-abc
-abc
+<
+br
+>
+<
+br
+>
+<
+/
+div
+>
 <
 div
 class
 =
 "
 spacer
-up
--
-half
 "
 >
 <
