Bug 1927171 [wpt PR 48822] - Catch committed promise rejection, a=testonly
Automatic update from web-platform-tests
Catch committed promise rejection (#48822)

Not catching promise rejection can (flakily) cause log statements in test results for WebKit.
--

wpt-commits: c300d3993baa5dbfbdff7cc7c56c31fec87c6af5
wpt-pr: 48822

UltraBlame original commit: fff9e4df4f0b5f11c0026cf492baddcbe2a7d8d6

--- a/testing/web-platform/tests/navigation-api/navigate-event/signal-abort-window-stop-in-onnavigate.html
+++ b/testing/web-platform/tests/navigation-api/navigate-event/signal-abort-window-stop-in-onnavigate.html
@@ -52,7 +52,7 @@ onload
 =
 t
 .
-step_func_done
+step_func
 (
 (
 )
@@ -149,7 +149,17 @@ navigate
 1
 "
 )
-;
+.
+committed
+.
+catch
+(
+(
+error
+)
+=
+>
+{
 assert_true
 (
 abort_signal
@@ -165,6 +175,15 @@ onabort_called
 assert_true
 (
 canceled_in_second_handler
+)
+;
+t
+.
+done
+(
+)
+;
+}
 )
 ;
 }
