Bug 1927238 [wpt PR 48827] - [reading-flow] Implement tabindex behavior, a=testonly
Automatic update from web-platform-tests
[reading-flow] Implement tabindex behavior

Per explainer [1], we update the reading-flow scope tabindex behavior:
1. On the "reading flow items", tabindex is ignored for ordering
purposes.
   1. If tabindex is higher than 0, adjust it to 0 for scoped focus
      navigation purposes.
2. On the descendants of the "reading flow items", tabindex's ordering
behavior is scoped to that reading flow item subtree.
   1. The reading flow items are scope owners.

[1] https://github.com/dizhang168/reading-flow/blob/main/reading-flow-vs-tabindex.md

We also remove the helper functions NextReadingFlowItem and
PreviousReadingFlowItem because the spec rules above simplify the
reading flow scope traversal and we do not need to visit descendants.

Change-Id: Ie1f24685d1b38fd64d06dc7d7945bb476d636f7a
Bug: 371024056
Bug: 40932006
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5950103
Reviewed-by: Mason Freed <masonfchromium.org>
Commit-Queue: Di Zhang <dizhanggchromium.org>
Cr-Commit-Position: refs/heads/main{#1374224}

--

wpt-commits: d840df7700c795923756a7b06261dfe702c1708a
wpt-pr: 48827

UltraBlame original commit: 0a8a302e5267c79a83faf6e79d72a273c65768c3

--- a/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order.html
+++ b/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order.html
@@ -549,12 +549,18 @@ data
 expect
 =
 "
-c3
 a3
+c3
 b3
-d3
 f3
 e3
+d3
+h3
+h32
+h31
+g3
+g31
+g32
 "
 data
 -
@@ -568,6 +574,22 @@ order
 property
 and
 tabindex
+.
+Positive
+tabindex
+doesn
+'
+t
+reorder
+reading
+flow
+item
+but
+can
+affect
+its
+descendants
+.
 "
 >
 <
@@ -738,6 +760,144 @@ F
 <
 /
 button
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+wrapper
+"
+>
+<
+div
+id
+=
+"
+g3
+"
+style
+=
+"
+order
+:
+2
+"
+tabindex
+=
+"
+0
+"
+>
+G
+<
+div
+id
+=
+"
+g31
+"
+tabindex
+=
+"
+1
+"
+>
+Item
+G1
+<
+/
+div
+>
+<
+div
+id
+=
+"
+g32
+"
+tabindex
+=
+"
+2
+"
+>
+Item
+G2
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+h3
+"
+style
+=
+"
+order
+:
+1
+"
+tabindex
+=
+"
+0
+"
+>
+H
+<
+div
+id
+=
+"
+h31
+"
+tabindex
+=
+"
+0
+"
+>
+Item
+H1
+<
+/
+div
+>
+<
+div
+id
+=
+"
+h32
+"
+tabindex
+=
+"
+1
+"
+>
+Item
+H2
+<
+/
+div
+>
+<
+/
+div
 >
 <
 /
