--- a/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/normal.html
+++ b/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/normal.html
@@ -37,9 +37,7 @@ reading
 flow
 with
 value
-grid
--
-order
+normal
 <
 /
 title
@@ -251,30 +249,77 @@ reading
 -
 flow
 :
-grid
--
-order
-;
-}
-.
-popover
-{
-inset
-:
-auto
-;
-top
-:
-200px
-;
-left
-:
-200px
+normal
 ;
 }
 <
 /
 style
+>
+<
+div
+class
+=
+"
+test
+-
+case
+"
+data
+-
+expect
+=
+"
+t1
+-
+c
+t1
+-
+d
+t1
+-
+g1
+t1
+-
+h2
+t2
+-
+e
+t2
+-
+f
+t2
+-
+g2
+a
+b
+g
+h
+h1
+"
+data
+-
+description
+=
+"
+Grid
+items
+with
+order
+property
+and
+tabindex
+.
+Focus
+should
+be
+in
+DOM
+tabindexed
+-
+order
+.
+"
 >
 <
 div
@@ -288,15 +333,19 @@ wrapper
 button
 id
 =
+"
 a
+"
 style
 =
 "
 order
 :
-4
+-
+1
 "
 >
+Item
 A
 <
 /
@@ -306,19 +355,19 @@ button
 button
 id
 =
-invoker
+"
+b
+"
 style
 =
 "
 order
 :
-2
+0
 "
-popovertarget
-=
-P
 >
-Invoker
+Item
+B
 <
 /
 button
@@ -327,15 +376,26 @@ button
 button
 id
 =
+"
+t1
+-
 c
+"
+tabindex
+=
+"
+1
+"
 style
 =
 "
 order
 :
+-
 1
 "
 >
+Item
 C
 <
 /
@@ -347,41 +407,26 @@ div
 >
 <
 div
-popover
-id
-=
-P
 class
 =
 "
-popover
+wrapper
 "
 >
 <
 button
 id
 =
-b1
-style
+"
+t1
+-
+d
+"
+tabindex
 =
 "
-order
-:
-3
+1
 "
->
-Popover
-button
-B1
-<
-/
-button
->
-<
-button
-id
-=
-b2
 style
 =
 "
@@ -390,9 +435,8 @@ order
 1
 "
 >
-Popover
-button
-B2
+Item
+D
 <
 /
 button
@@ -401,18 +445,55 @@ button
 button
 id
 =
-b3
+"
+t2
+-
+e
+"
+tabindex
+=
+"
+2
+"
 style
 =
 "
 order
 :
-2
+0
 "
 >
-Popover
+Item
+E
+<
+/
 button
-B3
+>
+<
+button
+id
+=
+"
+t2
+-
+f
+"
+tabindex
+=
+"
+2
+"
+style
+=
+"
+order
+:
+-
+1
+"
+>
+Item
+F
 <
 /
 button
@@ -422,133 +503,158 @@ button
 div
 >
 <
-script
->
-document
-.
-querySelector
-(
-'
-[
-popovertarget
-]
-'
-)
-.
-click
-(
-)
-;
-promise_test
-(
-async
-(
-)
+div
+class
 =
->
-{
-let
-elements
-=
-[
-'
-c
-'
-'
-invoker
-'
-'
-b1
-'
-'
-b2
-'
-'
-b3
-'
-'
-a
-'
-]
-;
-await
-assert_focus_navigation_forward
-(
-elements
-)
-;
-}
-Popover
-is
-reading
--
-flow
-item
-.
-)
-;
-promise_test
-(
-async
-(
-)
-=
->
-{
-P
-.
-classList
-.
-add
-(
 "
 wrapper
 "
-)
-;
-let
-elements
+>
+<
+div
+id
 =
-[
-'
-c
-'
-'
-invoker
-'
-'
-b2
-'
-'
-b3
-'
-'
-b1
-'
-'
-a
-'
-]
-;
-await
-assert_focus_navigation_forward
+"
+g
+"
+style
+=
+"
+order
+:
+2
+"
+tabindex
+=
+"
+0
+"
+>
+G
+<
+div
+id
+=
+"
+t1
+-
+g1
+"
+tabindex
+=
+"
+1
+"
+>
+Item
+G1
+<
+/
+div
+>
+<
+div
+id
+=
+"
+t2
+-
+g2
+"
+tabindex
+=
+"
+2
+"
+>
+Item
+G2
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+h
+"
+style
+=
+"
+order
+:
+1
+"
+tabindex
+=
+"
+0
+"
+>
+H
+<
+div
+id
+=
+"
+h1
+"
+tabindex
+=
+"
+0
+"
+>
+Item
+H1
+<
+/
+div
+>
+<
+div
+id
+=
+"
+t1
+-
+h2
+"
+tabindex
+=
+"
+1
+"
+>
+Item
+H2
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+script
+>
+runFocusTestCases
 (
-elements
-)
-;
-}
-Popover
-is
-reading
--
-flow
-item
-and
-reading
--
-flow
-container
-.
 )
 ;
 <
