--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -6000,6 +6000,11 @@ setup
 -
 sync
 "
+hidden
+=
+"
+true
+"
 /
 >
 <
@@ -6070,6 +6075,265 @@ disabled
 true
 "
 /
+>
+<
+vbox
+id
+=
+"
+PanelUI
+-
+fxa
+-
+menu
+-
+setup
+-
+sync
+-
+container
+"
+hidden
+=
+"
+true
+"
+>
+<
+toolbarseparator
+id
+=
+"
+PanelUI
+-
+set
+-
+up
+-
+sync
+-
+separator
+"
+/
+>
+<
+vbox
+class
+=
+"
+PanelUI
+-
+fxa
+-
+menu
+-
+setup
+-
+sync
+"
+flex
+=
+"
+1
+"
+>
+<
+hbox
+class
+=
+"
+sync
+-
+status
+-
+container
+"
+align
+=
+"
+center
+"
+>
+<
+image
+class
+=
+"
+sync
+-
+status
+-
+indicator
+"
+role
+=
+"
+presentation
+"
+/
+>
+<
+image
+class
+=
+"
+sync
+-
+setup
+-
+icon
+"
+alt
+=
+"
+Sync
+Status
+Icon
+"
+/
+>
+<
+label
+id
+=
+"
+sync
+-
+status
+-
+text
+"
+class
+=
+"
+sync
+-
+setup
+-
+title
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenuitem
+-
+fxa
+-
+sync
+-
+off
+-
+title
+"
+crop
+=
+"
+end
+"
+/
+>
+<
+/
+hbox
+>
+<
+label
+id
+=
+"
+sync
+-
+description
+-
+text
+"
+class
+=
+"
+sync
+-
+setup
+-
+description
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenuitem
+-
+fxa
+-
+sync
+-
+off
+-
+description
+"
+crop
+=
+"
+end
+"
+/
+>
+<
+toolbarbutton
+id
+=
+"
+PanelUI
+-
+fxa
+-
+menu
+-
+setup
+-
+sync
+-
+button
+-
+new
+"
+class
+=
+"
+subviewbutton
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+fxa
+-
+setup
+-
+sync
+-
+new
+"
+/
+>
+<
+/
+vbox
+>
+<
+/
+vbox
 >
 <
 toolbarbutton
