Bug 1914858, filename sanitization improvements, r=Gijs,mak
Differential Revision: https://phabricator.services.mozilla.com/D226639

UltraBlame original commit: e1b320fb4503dce32822ad3bdacebffc28aea345

--- a/uriloader/exthandler/tests/mochitest/save_filenames.html
+++ b/uriloader/exthandler/tests/mochitest/save_filenames.html
@@ -1999,7 +1999,7 @@ data
 filename
 =
 "
-extrapng
+extrapng___
 "
 >
 <
@@ -3825,6 +3825,9 @@ with
 .
 .
 dots
+.
+.
+png
 .
 .
 png
@@ -6108,9 +6111,14 @@ data
 filename
 =
 "
+_
+&
+#
+x180e
+;
 extraspace
 .
-png
+png__
 "
 >
 Link
