Backed out changeset e1b320fb4503 (bug 1914858) for causing xpcshell failures on test_filename_sanitize.js and test_DownloadPaths.js
UltraBlame original commit: 3802cf32541bf2b2b4997e78f25f5b6021599e37

--- a/uriloader/exthandler/tests/mochitest/save_filenames.html
+++ b/uriloader/exthandler/tests/mochitest/save_filenames.html
@@ -1999,7 +1999,7 @@ data
 filename
 =
 "
-extrapng___
+extrapng
 "
 >
 <
@@ -3825,9 +3825,6 @@ with
 .
 .
 dots
-.
-.
-png
 .
 .
 png
@@ -6111,14 +6108,9 @@ data
 filename
 =
 "
-_
-&
-#
-x180e
-;
 extraspace
 .
-png__
+png
 "
 >
 Link
