--- a/gfx/layers/apz/test/mochitest/test_group_fission.html
+++ b/gfx/layers/apz/test/mochitest/test_group_fission.html
@@ -183,6 +183,22 @@ file
 "
 :
 "
+helper_fission_setResolution
+.
+html
+"
+"
+prefs
+"
+:
+prefs
+}
+{
+"
+file
+"
+:
+"
 helper_fission_tap_on_zoomed
 .
 html
