Bug 1922020, part 2  - Remove reliance on window.opener storage access heuristic in user.js from docshell/test/mochitest - r=smaug
The helper function here is derived from code you helped design when we were first enabling TCP in xorigin mochitests

Differential Revision: https://phabricator.services.mozilla.com/D224807

UltraBlame original commit: 7788bdb8a84f187c3235f22d720aa13dbabae1a3

--- a/docshell/test/mochitest/test_bug1743353.html
+++ b/docshell/test/mochitest/test_bug1743353.html
@@ -81,11 +81,19 @@ waitForExplicitFinish
 (
 )
 ;
+async
 function
 runTest
 (
 )
 {
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 let
 bc
 =
