--- a/docshell/test/mochitest/test_bug660404.html
+++ b/docshell/test/mochitest/test_bug660404.html
@@ -343,6 +343,19 @@ script
 head
 >
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc_multipart
 =
@@ -556,6 +569,9 @@ html
 "
 noopener
 "
+)
+;
+}
 )
 ;
 }
