--- a/docshell/test/mochitest/test_bug1741132.html
+++ b/docshell/test/mochitest/test_bug1741132.html
@@ -107,11 +107,19 @@ waitForExplicitFinish
 (
 )
 ;
+async
 function
 runTest
 (
 )
 {
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 let
 bc
 =
