--- a/docshell/test/mochitest/test_bug1747033.html
+++ b/docshell/test/mochitest/test_bug1747033.html
@@ -80,11 +80,19 @@ waitForExplicitFinish
 (
 )
 ;
+async
 function
 runTest
 (
 )
 {
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 let
 bc
 =
