Bug 1922020, part 3  - Remove reliance on window.opener storage access heuristic in user.js from docshell/test/navigation - r=smaug
The helper function here is derived from code you helped design when we were first enabling TCP in xorigin mochitests

Differential Revision: https://phabricator.services.mozilla.com/D224808

UltraBlame original commit: e2f6705760afed196b27f49b9de4004ebb99d421

--- a/docshell/test/navigation/test_bug1583110.html
+++ b/docshell/test/navigation/test_bug1583110.html
@@ -71,6 +71,7 @@ css
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -78,6 +79,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -191,11 +205,7 @@ finish
 ;
 }
 }
-function
-test
-(
-)
-{
+;
 window
 .
 open
@@ -213,6 +223,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
@@ -223,13 +235,6 @@ head
 >
 <
 body
-onload
-=
-"
-test
-(
-)
-"
 >
 <
 p
