--- a/docshell/test/navigation/test_evict_from_bfcache.html
+++ b/docshell/test/navigation/test_evict_from_bfcache.html
@@ -73,6 +73,7 @@ css
 >
 <
 script
+defer
 >
 /
 *
@@ -214,6 +215,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -438,11 +452,6 @@ finish
 ;
 }
 }
-function
-runTest
-(
-)
-{
 window
 .
 open
@@ -460,6 +469,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
@@ -470,13 +481,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 p
