--- a/docshell/test/navigation/test_meta_refresh.html
+++ b/docshell/test/navigation/test_meta_refresh.html
@@ -71,6 +71,7 @@ css
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -78,6 +79,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 let
 hasLoadedInitialOnce
 =
@@ -248,11 +262,6 @@ finish
 ;
 }
 }
-function
-test
-(
-)
-{
 window
 .
 open
@@ -272,6 +281,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
@@ -282,13 +293,6 @@ head
 >
 <
 body
-onload
-=
-"
-test
-(
-)
-"
 >
 <
 p
