--- a/docshell/test/navigation/test_navigation_type.html
+++ b/docshell/test/navigation/test_navigation_type.html
@@ -73,6 +73,7 @@ css
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -80,6 +81,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 let
 bc
 =
@@ -265,11 +279,6 @@ load
 ;
 }
 }
-function
-test
-(
-)
-{
 window
 .
 open
@@ -287,6 +296,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
@@ -297,13 +308,6 @@ head
 >
 <
 body
-onload
-=
-"
-test
-(
-)
-"
 >
 <
 p
