--- a/docshell/test/navigation/test_online_offline_bfcache.html
+++ b/docshell/test/navigation/test_online_offline_bfcache.html
@@ -73,6 +73,7 @@ css
 >
 <
 script
+defer
 >
 /
 *
@@ -324,6 +325,19 @@ offlineFn
 )
 ;
 }
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -647,6 +661,11 @@ event
 else
 if
 (
+event
+.
+data
+=
+=
 "
 closed
 "
@@ -678,11 +697,6 @@ finish
 }
 }
 ;
-function
-runTest
-(
-)
-{
 SpecialPowers
 .
 pushPrefEnv
@@ -731,6 +745,8 @@ noopener
 )
 ;
 }
+)
+;
 SimpleTest
 .
 waitForExplicitFinish
@@ -747,13 +763,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 p
