--- a/docshell/test/navigation/test_performance_navigation.html
+++ b/docshell/test/navigation/test_performance_navigation.html
@@ -97,13 +97,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 a
@@ -193,6 +186,25 @@ javascript
 var
 testWindow
 ;
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -275,11 +287,6 @@ finish
 ;
 }
 ;
-function
-runTest
-(
-)
-{
 /
 /
 If
@@ -342,6 +349,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
