--- a/docshell/test/navigation/test_reload.html
+++ b/docshell/test/navigation/test_reload.html
@@ -81,6 +81,7 @@ css
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -88,6 +89,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 let
 pageshowCount
 =
@@ -239,11 +253,6 @@ finish
 ;
 }
 }
-function
-test
-(
-)
-{
 window
 .
 open
@@ -261,6 +270,8 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
@@ -271,13 +282,6 @@ head
 >
 <
 body
-onload
-=
-"
-test
-(
-)
-"
 >
 <
 p
