--- a/docshell/test/navigation/test_same_url.html
+++ b/docshell/test/navigation/test_same_url.html
@@ -119,6 +119,19 @@ file_same_url
 .
 html
 .
+async
+function
+test
+(
+)
+{
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 let
 bc
 =
@@ -132,10 +145,78 @@ test_same_url
 ;
 async
 function
-test
+waitForLoad
 (
 )
 {
+return
+new
+Promise
+(
+resolve
+=
+>
+{
+let
+listener
+=
+e
+=
+>
+{
+if
+(
+e
+.
+data
+.
+bodyOnLoad
+)
+{
+bc
+.
+removeEventListener
+(
+"
+message
+"
+listener
+)
+;
+setTimeout
+(
+(
+)
+=
+>
+resolve
+(
+e
+.
+data
+.
+bodyOnLoad
+)
+0
+)
+;
+}
+}
+;
+bc
+.
+addEventListener
+(
+"
+message
+"
+listener
+)
+;
+}
+)
+;
+}
 var
 promise
 ;
@@ -229,80 +310,6 @@ SimpleTest
 .
 finish
 (
-)
-;
-}
-async
-function
-waitForLoad
-(
-)
-{
-return
-new
-Promise
-(
-resolve
-=
->
-{
-let
-listener
-=
-e
-=
->
-{
-if
-(
-e
-.
-data
-.
-bodyOnLoad
-)
-{
-bc
-.
-removeEventListener
-(
-"
-message
-"
-listener
-)
-;
-setTimeout
-(
-(
-)
-=
->
-resolve
-(
-e
-.
-data
-.
-bodyOnLoad
-)
-0
-)
-;
-}
-}
-;
-bc
-.
-addEventListener
-(
-"
-message
-"
-listener
-)
-;
-}
 )
 ;
 }
