--- a/docshell/test/navigation/test_scrollRestoration.html
+++ b/docshell/test/navigation/test_scrollRestoration.html
@@ -96,13 +96,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 a
@@ -1597,10 +1590,18 @@ noopener
 )
 ;
 }
-function
-runTest
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
 (
 )
+.
+then
+(
+(
+)
+=
+>
 {
 /
 /
@@ -1646,6 +1647,8 @@ test1
 )
 ;
 }
+)
+;
 <
 /
 script
