--- a/docshell/test/navigation/test_ship_beforeunload_fired.html
+++ b/docshell/test/navigation/test_ship_beforeunload_fired.html
@@ -73,6 +73,7 @@ head
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -204,6 +205,19 @@ BFCache
 .
 *
 /
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -457,11 +471,6 @@ true
 ;
 }
 }
-function
-runTest
-(
-)
-{
 SpecialPowers
 .
 pushPrefEnv
@@ -518,19 +527,14 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 /
