--- a/docshell/test/navigation/test_ship_beforeunload_fired_3.html
+++ b/docshell/test/navigation/test_ship_beforeunload_fired_3.html
@@ -73,6 +73,7 @@ head
 >
 <
 script
+defer
 >
 SimpleTest
 .
@@ -211,6 +212,19 @@ BFCache
 .
 *
 /
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -470,11 +484,6 @@ true
 ;
 }
 }
-function
-runTest
-(
-)
-{
 SpecialPowers
 .
 pushPrefEnv
@@ -531,19 +540,14 @@ noopener
 )
 ;
 }
+)
+;
 <
 /
 script
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 /
