--- a/docshell/test/navigation/test_bug1379762.html
+++ b/docshell/test/navigation/test_bug1379762.html
@@ -96,13 +96,6 @@ head
 >
 <
 body
-onload
-=
-"
-runTest
-(
-)
-"
 >
 <
 a
@@ -301,6 +294,94 @@ goneBack
 =
 false
 ;
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+function
+runTest
+(
+)
+{
+/
+/
+If
+Fission
+is
+disabled
+the
+pref
+is
+no
+-
+op
+.
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+fission
+.
+bfcacheInParent
+"
+true
+]
+]
+}
+(
+)
+=
+>
+{
+window
+.
+open
+(
+"
+file_bug1379762
+-
+1
+.
+html
+"
+"
+"
+"
+width
+=
+360
+height
+=
+480
+noopener
+"
+)
+;
+}
+)
+;
+}
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 var
 bc
 =
@@ -496,81 +577,14 @@ finish
 ;
 }
 }
-SimpleTest
-.
-waitForExplicitFinish
-(
+}
 )
-;
-function
+.
+then
+(
 runTest
-(
-)
-{
-/
-/
-If
-Fission
-is
-disabled
-the
-pref
-is
-no
--
-op
-.
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-[
-"
-fission
-.
-bfcacheInParent
-"
-true
-]
-]
-}
-(
-)
-=
->
-{
-window
-.
-open
-(
-"
-file_bug1379762
--
-1
-.
-html
-"
-"
-"
-"
-width
-=
-360
-height
-=
-480
-noopener
-"
 )
 ;
-}
-)
-;
-}
 <
 /
 script
