Bug 1926102 [wpt PR 48740] - LCP/elementTiming: Expose 4ms-coarsened renderTime regardless of TAO, a=testonly
Automatic update from web-platform-tests
LCP/elementTiming: Expose 4ms-coarsened renderTime regardless of TAO (#48740)

Cross-origin isolation is more appropriate for render times than TAO,
as it's a document-level protection rather than resource-level.

Using FloorToMultiple instead of TimeClamper, as randomization is
both unnecessary here, and would create incompatible results between
different entries.

Bug: 373263977
Change-Id: I7715d26c7732b69078aa5bb2ce8614100932e971
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5930666
Reviewed-by: Michal Mocny <mmocnychromium.org>
Commit-Queue: Noam Rosenthal <nrosenthalchromium.org>
Reviewed-by: Ian Clelland <iclellandchromium.org>
Cr-Commit-Position: refs/heads/main{#1374558}

Co-authored-by: Noam Rosenthal <nrosenthalchromium.org>
--

wpt-commits: b0a91ced1bd21fa0daaf6417b7a87a824a603504
wpt-pr: 48740

UltraBlame original commit: dbf40d06dd9b42391f0c5607f9ed236efc4f6d19

--- a/testing/web-platform/tests/element-timing/cross-origin-element.sub.html
+++ b/testing/web-platform/tests/element-timing/cross-origin-element.sub.html
@@ -111,6 +111,15 @@ t
 =
 >
 {
+const
+test_start
+=
+performance
+.
+now
+(
+)
+;
 assert_implements
 (
 window
@@ -220,16 +229,18 @@ my_image
 '
 the_id
 '
-0
+test_start
 img
 )
 ;
-assert_equals
+assert_greater_than_equal
 (
 entry
 .
 renderTime
-0
+entry
+.
+loadTime
 '
 The
 renderTime
@@ -241,8 +252,14 @@ origin
 image
 should
 be
-0
-.
+coarse
+but
+at
+least
+as
+high
+as
+loadTime
 '
 )
 ;
